# robowrestling-software

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SENSORS.md  auto-sumo_robogames_bugged  auto_sumo_spr2017.ino  ben.txt  h_sumo_search.ino  robowrestling-software.ino  sumo_hc_sr04.ino
3kg/: readme.md
3kg/Fewawi/: overthrowThePM  yareyare
3kg/Kitti/: platformio.ini
3kg/Monki/: Monki
3kg/Skibidi/: Skibidi
3kg/monki/: readme.md
3kg/skibidi/: .gitignore  platformio.ini
3kg/test/: xander2.txt
500g/: readme.md
500g/BUKI/: BUKI  BUKI.md  buki.md  platformio.ini
500g/Celebi/: README.md  platformio.ini
500g/Krabbi/: platformio.ini
500g/Luigi/: platformio.ini
500g/Musubi/: hiiii_xander.txt  musubidraft1.kicad_sch  musubidraft2.kicad_sch  musubidraft3.kicad_sch
500g/Oni/: Oni  platformio.ini
500g/Pharmaci/: Pharmaci  platformio.ini
500g/Pooki/: platformio.ini
500g/PookiWooki/: PookiWooki
500g/Rata2i/: Rata2i
500g/Shorti/: platformio.ini
500g/Sp-I/: Sp-I.kicad_prl  Sp-I.kicad_pro  Sp-I.kicad_sch
500g/Spi/: todo.txt
500g/Temporari/: Temporari
500g/Temporarii/: platformio.ini
500g/Zesti/: Zesti
500g/new-members/: readme.md
ControlBoard/KiCadConversionInit/: RWControlBoardParts.kicad_prl
ControlBoard/RWControlBoardParts/: RWControlBoardLibrary.bak  RWControlBoardLibrary.kicad_sym  RWControlBoardParts.kicad_pro  sym-lib-table
Current Board/: CQ2065.l#1  CurrentSensing.l#3  CurrentSensing.l#4  CurrentSensing.l#8
CurrentSensingBoard/: powerDistribution.b#1  powerDistribution.b#2  powerDistribution.b#3  powerDistribution.b#4  powerDistribution.b#5  powerDistribution.b#6  powerDistribution.b#7  powerDistribution.b#8  powerDistribution.b#9  powerDistribution.brd  powerDistribution.s#1  powerDistribution.s#2  powerDistribution.s#3  powerDistribution.s#4  powerDistribution.s#5  powerDistribution.s#6  powerDistribution.s#8  powerDistribution.s#9  powerDistribution.sch  sensor.b#1  sensor.b#2  sensor.b#3  sensor.b#4  sensor.b#5  sensor.b#6  sensor.b#7  sensor.b#8  sensor.b#9  sensor.brd  sensor.pro  sensor.s#1  sensor.s#2  sensor.s#3  sensor.s#4  sensor.s#5  sensor.s#6  sensor.s#7  sensor.s#8  sensor.s#9  sensor.sch
CurrentSensingBoard/Adafruit-Eagle-Library/: Adafruit FET 4-Channel Shifter.lbr  Adafruit FET 4-Channel Shifter.scr  Adafruit FET 4-Channel Shifter_ReplaceLibParts.scr
CurrentSensingBoard/CurrentSensingLib/: CurrentSensing.l#1  (+18 more)
Firmware/: README.md
Gucci/: README.md  gucci.cpp  gucci.h
Kirbi/: Kirbi_ControlBoard.brd  Kirbi_ControlBoard.sch  MotorTemps2.m  kirbi.cpp  kirbi.h
PowerDistribution/: powerDistribution.brd  powerDistribution.sch
Radio/: PowerRegulator.l#1  PowerRegulator.l#2  PowerRegulator.l#3  PowerRegulator.l#4  PowerRegulator.l#5  PowerRegulator.l#6  PowerRegulator.l#7  PowerRegulator.l#8  PowerRegulator.l#9  PowerRegulator.lbr  Radii.brd  Radii.sch
example/: readme.md
example/rusti/: .gitignore  Cargo.toml  rusti.hex  upload.sh
example/rusti/src/: main.rs
firmware/: README.md  Slammy_whammy_thingie_.cpp  platformio.ini
graphics/: CMakeLists.txt
imgui/: CMakeLists.txt  imconfig.h
include/: Franki.h  FrankiAction.h
lib/: diagnostic.cpp  diagnostic.h  diagnostic.ino  sensor_struct.h
libraries/: READ.ME
openings/: CMakeLists.txt
pcbs/: README.md
simulator/: SIMULATOR.md  abstract_distance_sensor.h  basicrobot.cpp  basicrobot.h  distance_sensor.cpp  distance_sensor.h  game.cpp  game.h  line_sensor.cpp  line_sensor.h  robot.h  robot_action_interface.h  robotphysicsupdater.cpp  robotphysicsupdater.h  sensor_interface.h  sim.cpp  sim.h  sim.md  strategy.h
simulator/src/: CMakeLists.txt  Dohyo.cpp  collisiontest  phystest
simulator/src/simulator/: Dohyo.cpp  basicrobot.cpp  sim.cpp  simtest.cpp
simulator/src/simulator/physics/: CMakeLists.txt  CollisionHandler.cpp  RigidBody2d.cpp  SATCollisionDetector.cpp  Vector2f.cpp  oldphysicsupdater.cpp  robotphysicsupdater.cpp  robotphysicsupdaterDEBUG.cpp  testphysicsupdater.cpp
simulator/src/simulator/robots/: AdvRobot.cpp  CMakeLists.txt  basicrobot.cpp  newRobot.cpp
simulator/src/simulator/robots/control/: CMakeLists.txt  PIDLoop.cpp
simulator/src/simulator/sensors/: CMakeLists.txt  basicrobot_handler.cpp  brodyrobot_handler.cpp  distance_sensor.cpp  distance_sensor_j.cpp  encoder.cpp  gps_sensor.cpp  imu.cpp  line_sensor.cpp  location_sensor.cpp
simulator/src/simulator/tests/: collisiontests.cpp  physicstest.cpp
simulator/src/simulator/ui/: startmenu.cpp
sketch_dec12a/: sketch_dec12a.ino
src/: Franki.cpp  main.cpp
strategy/: CMakeLists.txt  STRATEGY.md  platformio.ini  strategy.md
strategy/include/strategy/: Dodge.h  Dodge.h~  antiaim.h  avoid_strategy.h  basic_dist.h  distance_strategy.h  idle_strategy.h  kevin_brody.h  kevin_brody_enemy.h  loop_strategy.h  roam_strategy.h  search_strategy.h  sensor_strategy.h  side_swipe.h  slammywhammy.h  state_strategy.h  strategy.h
strategy/include/strategy/diagnostic/: diagnostic.h
strategy/src/: #Dodge.cpp#  CMakeLists.txt  Dodge.cpp  antiaim.cpp  avoid_strategy.cpp  basic_dist.cpp  distance_strategy.cpp  idle_strategy.cpp  kevin_brody.cpp  kevin_brody_enemy.cpp  loop_strategy.cpp  roam_strategy.cpp  search_strategy.cpp  sensor_strategy.cpp  side_swipe.cpp  slammywhammy  slammywhammy.cpp  state_strategy.cpp
strategy/src/Behaviors/: Slam.h
strategy/src/diagnostic/: diagnostic.cpp  diagnostic.ino
tests/: CMakeLists.txt
v3/: README.md
(+1210 files in other folders)
